@@ -1,10 +1,13 @@
 package diary.gateway.filter;
 
+import diary.common.consts.RedisKeyConst;
 import diary.utils.jwt.JwtUtil;
 import jakarta.annotation.Resource;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
 import org.springframework.core.Ordered;
+import org.springframework.data.redis.core.ReactiveStringRedisTemplate;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
@@ -12,87 +15,104 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * JWT 认证过滤器
- * 在每个请求到达时校验 token 是否有效
- */
 @Component
 public class JwtAuthFilter implements GlobalFilter, Ordered {
 
     @Resource
     private JwtUtil jwtUtil;
 
-    // 需要排除认证的路径列表
-    private static final List<String> EXCLUDE_PATHS = Arrays.asList(
+    @Resource
+    private ReactiveStringRedisTemplate reactiveStringRedisTemplate;
+
+    private static final List<String> EXCLUDE_PATHS = List.of(
             "/user/login",
             "/user/register",
-            "/user/verifyCode",
-            "/user/resetPassword",
-            "/actuator/**",
+            "/user/verifycode",
+            "/user/resetPw",
+            "/user/refresh",
+            "/actuator",
             "/favicon.ico"
     );
+
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
-        String path = request.getURI().getPath();
+        if (request.getMethod() == HttpMethod.OPTIONS) {
+            return chain.filter(exchange);
+        }
 
-        // 检查是否需要跳过认证
+        String path = request.getURI().getPath();
         if (shouldSkipAuth(path)) {
             return chain.filter(exchange);
         }
 
-        // 从请求头中获取 Authorization token
         String authHeader = request.getHeaders().getFirst("Authorization");
-
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-            ServerHttpResponse response = exchange.getResponse();
-            response.setStatusCode(HttpStatus.UNAUTHORIZED);
-            return response.setComplete();
+            return unauthorized(exchange);
         }
 
-        String token = authHeader.substring(7); // 移除 "Bearer " 前缀
-
+        String accessToken = authHeader.substring(7);
+        String username;
+        String tokenId;
+        List<String> roles;
         try {
-            // 校验 token
-            String username = jwtUtil.extractUsername(token);
-            if (username == null || username.trim().isEmpty()) {
-                ServerHttpResponse response = exchange.getResponse();
-                response.setStatusCode(HttpStatus.UNAUTHORIZED);
-                return response.setComplete();
+            if (!jwtUtil.isAccessToken(accessToken)) {
+                return unauthorized(exchange);
             }
-
-            // 将用户名添加到请求属性中，供后续服务使用
-            exchange.getAttributes().put("username", username);
-
+            username = jwtUtil.extractUsername(accessToken);
+            tokenId = jwtUtil.extractTokenId(accessToken);
+            roles = jwtUtil.extractRoles(accessToken);
         } catch (Exception e) {
-            ServerHttpResponse response = exchange.getResponse();
-            response.setStatusCode(HttpStatus.UNAUTHORIZED);
-            return response.setComplete();
+            return unauthorized(exchange);
         }
 
-        return chain.filter(exchange);
+        Mono<Boolean> inWhite = reactiveStringRedisTemplate.hasKey(RedisKeyConst.TOKEN_WHITE_PREFIX + tokenId);
+        Mono<Boolean> inBlack = reactiveStringRedisTemplate.hasKey(RedisKeyConst.TOKEN_BLACK_PREFIX + tokenId);
+
+        return Mono.zip(inWhite, inBlack)
+                .flatMap(tuple -> {
+                    boolean validToken = Boolean.TRUE.equals(tuple.getT1()) && !Boolean.TRUE.equals(tuple.getT2());
+                    if (!validToken) {
+                        return unauthorized(exchange);
+                    }
+                    if (requiresAdmin(path) && !roles.contains("admin")) {
+                        return forbidden(exchange);
+                    }
+
+                    // Downstream services can read these trusted headers directly.
+                    ServerHttpRequest mutatedRequest = request.mutate()
+                            .header("X-Auth-Username", username)
+                            .header("X-Auth-Roles", String.join(",", roles))
+                            .build();
+                    return chain.filter(exchange.mutate().request(mutatedRequest).build());
+                });
     }
-    
+
     private boolean shouldSkipAuth(String path) {
-        for (String excludePath : EXCLUDE_PATHS) {
-            if (excludePath.endsWith("**")) {
-                String prefix = excludePath.substring(0, excludePath.length() - 2);
-                if (path.startsWith(prefix)) {
-                    return true;
-                }
-            } else if (path.equals(excludePath)) {
-                return true;
-            }
-        }
-        return false;
+        return EXCLUDE_PATHS.stream().anyMatch(excludePath ->
+                path.equals(excludePath) || path.startsWith(excludePath + "/"));
+    }
+
+    private boolean requiresAdmin(String path) {
+        return path.contains("/add") || path.contains("/delete");
+    }
+
+    private Mono<Void> unauthorized(ServerWebExchange exchange) {
+        ServerHttpResponse response = exchange.getResponse();
+        response.setStatusCode(HttpStatus.UNAUTHORIZED);
+        return response.setComplete();
+    }
+
+    private Mono<Void> forbidden(ServerWebExchange exchange) {
+        ServerHttpResponse response = exchange.getResponse();
+        response.setStatusCode(HttpStatus.FORBIDDEN);
+        return response.setComplete();
     }
 
     @Override
     public int getOrder() {
-        return Ordered.HIGHEST_PRECEDENCE + 1; // 在路由之前执行
+        return Ordered.HIGHEST_PRECEDENCE + 1;
     }
-
 }
